tests/unit/operations/comparissons/compilation_errors/error_1.rb
# TypeError: Fixnum can't be coerced into String
if ("foo" > 1)
	puts("hola")
end
